--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
-group = 'io.github.themorningcompany.survivalutil' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = '1.0.1'
+group = 'net.themorningcompany.survivalutil' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'survivalutil'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
